# otj

./: .gitignore  Built_ins.cpp  Built_ins.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Command.cpp  Command.hpp  Eval.hpp  Interpreter.cpp  Interpreter.hpp  Result.hpp  Scheduler.cpp  Scheduler.hpp  Symbol.cpp  Symbol.hpp  Term.cpp  Term.hpp  Value.cpp  Value.hpp  main.cpp
